# fantasy-baseball-agent

./: .gitignore  CONVENTIONS.md  CREDENTIALS_GUIDE.md  README.md  TODO.md  config.ini.example  pyproject.toml
agent/: cli.py  logger.py  stats.py
agent/analysis/: matchup.py  streamers.py  trends.py
agent/credentials/: __init__.py
agent/data/: espn_draft.py  espn_rankings.py  espn_rosters.py  espn_schedule.py  espn_settings.py  espn_standings.py  mlb_boxscores.py  player_map.py  players.py  storage.py
agent/draft/: adp.py  keepers.py  rankings.py
agent/llm/: __init__.py  base.py  providers.py
agent/scoring/: __init__.py  categories.py  matchup.py
agent/team/: lineup.py  pitchers.py  recommendations.py  roster.py  valuation.py
agent/trade/: counter.py  evaluator.py  finder.py  projections.py  simulation.py
agent/workflows/: __init__.py  daily_collection.py  draft_prep.py  trade_scan.py  weekly_prep.py
harness/templates/: CLAUDE.md.template  ENVIRONMENT.md.template  GEMINI.md.template
harness/workflows/: daily-collection.md  draft-prep.md  trade-scan.md  weekly-prep.md
scripts/: setup_harness.py
scripts/analysis/: find_streamers.py  matchup_preview.py  player_trends.py
scripts/credentials/: setup_credentials.py
scripts/data/: fetch_draft_espn_season.py  fetch_espn_rosters.py  fetch_mlb_boxscores.py  fetch_rankings_espn_daily.py  fetch_rosters_espn_season.py  fetch_schedule_espn_season.py  fetch_settings_espn_season.py  fetch_standings_espn_season.py  fetch_stats_mlb_daily.py  (+1 more)
tests/: test_players.py  test_rates.py  test_scoring.py
(+20 files in other folders)
